# embevity_task

./: .gitignore
CommunicationLib/: CMakeLists.txt
CommunicationLib/include/: client.hpp  exceptions.hpp  server.hpp  special_commands.hpp  utils.hpp
CommunicationLib/src/: client.cpp  exceptions.cpp  server.cpp  utils.cpp
MainApp/: CMakeLists.txt
MainApp/include/: communicator.hpp  sensor.hpp  ui.hpp
MainApp/lib/position_detector/: CMakeLists.txt
MainApp/lib/position_detector/include/: position_detector.hpp  ring_buffer.hpp
MainApp/lib/position_detector/src/: position_detector.cpp
MainApp/lib/sensor/: CMakeLists.txt
MainApp/lib/sensor/include/: sensor.hpp
MainApp/lib/sensor/src/: sensor.cpp
MainApp/src/: main.cpp  ui.cpp
Simulator/: 222.txt  CMakeLists.txt
Simulator/include/: BM1390GLV_ZTR.hpp  memory_map.hpp
Simulator/src/: BM1390GLV_ZTR.cpp  main.cpp
